--- a/Forest Fires.ipynb
+++ b/Forest Fires.ipynb
@@ -2894,31 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Found input variables with inconsistent numbers of samples: [310, 207]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-006ff1423f5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mr2_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda\\lib\\site-packages\\sklearn\\metrics\\regression.py\u001b[0m in \u001b[0;36mr2_score\u001b[1;34m(y_true, y_pred, sample_weight, multioutput)\u001b[0m\n\u001b[0;32m    532\u001b[0m     \"\"\"\n\u001b[0;32m    533\u001b[0m     y_type, y_true, y_pred, multioutput = _check_reg_targets(\n\u001b[1;32m--> 534\u001b[1;33m         y_true, y_pred, multioutput)\n\u001b[0m\u001b[0;32m    535\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    536\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda\\lib\\site-packages\\sklearn\\metrics\\regression.py\u001b[0m in \u001b[0;36m_check_reg_targets\u001b[1;34m(y_true, y_pred, multioutput)\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m     \"\"\"\n\u001b[1;32m---> 75\u001b[1;33m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     76\u001b[0m     \u001b[0my_true\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda\\lib\\site-packages\\sklearn\\utils\\validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    233\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    234\u001b[0m         raise ValueError(\"Found input variables with inconsistent numbers of\"\n\u001b[1;32m--> 235\u001b[1;33m                          \" samples: %r\" % [int(l) for l in lengths])\n\u001b[0m\u001b[0;32m    236\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [310, 207]"
-     ]
-    }
-   ],
-   "source": [
-    "r2_score(y_train, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2927,7 +2903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2936,7 +2912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2946,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2955,16 +2931,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lm.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2973,16 +2961,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.08860181e+01, -6.08694332e+00,  9.39665535e+00,  6.92149815e+00,\n",
+       "        2.08835486e+01,  6.10907977e+00,  4.78956275e+00,  5.79758929e+00,\n",
+       "        3.00115069e+01,  3.89385320e+00,  1.38956205e+01,  6.09465879e+00,\n",
+       "       -2.00147994e+00,  8.88515066e+00,  1.74421429e+01,  5.00133109e+00,\n",
+       "        1.21341814e+01,  2.69097289e+01,  6.07147199e+00,  2.59718696e+01,\n",
+       "        3.11380781e+01,  5.69035439e+00,  1.49389360e+01,  8.04473305e+00,\n",
+       "        3.95290119e+00,  2.33935519e+01,  1.01157914e+01,  1.23853101e+01,\n",
+       "       -4.73456188e+00,  1.04345295e+01,  4.18557763e+01,  2.42333622e+00,\n",
+       "        2.09702481e+01,  4.72018215e-01,  6.93856330e+00, -1.03271456e+01,\n",
+       "       -1.03721720e+01,  2.44473935e+01,  2.65795931e+01,  1.45489625e+01,\n",
+       "        1.95671069e+01,  1.39991711e+01, -2.67551774e-01, -1.29268756e+01,\n",
+       "        3.35118053e+01,  5.89620549e+00,  5.49845193e+00,  2.57082762e+01,\n",
+       "        1.68996006e+01,  1.75795444e+01,  2.36478051e+01,  2.35316549e+01,\n",
+       "        1.55032676e+01,  1.04902470e+01,  1.54829054e+01,  8.48249247e+00,\n",
+       "        8.83621880e+00,  1.41217967e+01,  2.07520213e+01,  3.53033073e+01,\n",
+       "       -1.39315887e+00,  1.81281086e+00,  1.08941393e+01,  8.67011183e+00,\n",
+       "        2.26502309e+01,  1.16348658e+01,  8.40896365e+00,  4.46873871e+00,\n",
+       "        1.15701431e+00,  2.77409872e+00,  2.28160486e+01,  5.63994832e+00,\n",
+       "        4.49693422e+00, -4.88311098e+00,  3.29456843e+01, -1.23761823e+00,\n",
+       "        1.89035792e+01,  7.61102732e+00,  2.66003194e+01,  9.60822670e-01,\n",
+       "        2.60154089e+01,  2.76351591e+01,  3.94796807e+01,  2.03169017e+01,\n",
+       "        2.27502519e+00,  2.37248024e+01,  8.65994545e+00,  1.38978028e+01,\n",
+       "       -9.21798407e-01,  1.81191891e+00, -5.09435182e+00,  1.82049240e+01,\n",
+       "        2.57010668e+01,  9.40502494e+00,  2.27024142e+01,  2.13552812e+01,\n",
+       "        2.58406082e+01,  4.83640489e+00,  1.32556960e+01,  1.56360915e+01,\n",
+       "        9.90613116e+00,  1.95969196e+01,  1.48787900e+01,  9.93212631e+00,\n",
+       "        7.38100100e+00,  2.90411883e+01,  4.43849461e+01,  3.52504410e+00,\n",
+       "        1.50868714e+01,  1.58680372e+01,  3.43322976e+01,  1.13187493e+01,\n",
+       "        2.50347241e+01,  2.86119489e+01,  2.86035328e+01, -3.98169810e+00,\n",
+       "        1.52355300e+01, -3.16511534e+00,  8.43789273e+00,  1.85454534e+01,\n",
+       "        5.95082771e+00, -2.98826093e+00,  5.03781463e+01,  1.22309664e+01,\n",
+       "        1.37889106e+01,  5.94047508e+00,  2.16610271e+01,  2.67100518e+01,\n",
+       "        2.64048560e+01,  1.59897224e+01, -2.32009804e+00,  3.68865652e+00,\n",
+       "        7.84481267e+00,  8.78899477e+00, -4.96521313e+00,  1.41920163e+01,\n",
+       "       -1.76953715e+00,  9.41253997e+00, -8.55071969e-01, -1.57987802e+02,\n",
+       "        2.35273207e+01,  4.16547956e+01,  1.81398704e+01,  1.23674058e+01,\n",
+       "        6.80526020e+00,  6.67985149e+00, -7.16274415e-01,  2.16189475e+01,\n",
+       "        1.46255641e+01, -1.21313720e+01,  1.57893772e+01,  1.79209811e+01,\n",
+       "        2.51585168e+01,  1.03718825e+01,  1.38090285e+01,  1.08099056e+01,\n",
+       "       -7.48949441e-01,  8.88684171e+00, -1.36256948e+01, -1.36974948e-01,\n",
+       "        7.97200320e+00,  3.84793723e+00, -1.34826322e+00,  1.16825123e+01,\n",
+       "        1.69593362e+01, -2.24329799e-02,  2.42263157e+01, -7.28942883e+00,\n",
+       "       -1.00913715e+01,  2.99634702e+01,  1.56766999e+01,  2.82870332e+01,\n",
+       "        1.11723409e+01,  2.27794630e+01,  1.30097445e+01,  1.64331233e+01,\n",
+       "        2.55759197e+00,  5.04875828e+00,  8.29607839e+00,  9.02927225e+00,\n",
+       "        1.59010260e+01,  4.60795304e+01,  1.93252979e+01,  2.17670791e+01,\n",
+       "        3.19512346e+01,  2.26602456e+01,  5.03299095e+00,  2.32335853e+01,\n",
+       "        2.42795254e+01,  2.09611634e+01, -3.18966309e+00, -3.80316410e+00,\n",
+       "        6.75872204e+00,  4.13343980e+01, -2.35192329e+01,  2.09337837e+00,\n",
+       "        1.37050144e+00,  6.01973040e+00,  7.03462183e+00,  1.13169834e+01,\n",
+       "        2.09301132e+01, -2.84847382e+00,  3.07388435e+01,  9.55870414e+00,\n",
+       "        2.84455526e+01,  7.09854222e+00,  3.52814676e+01,  5.65106768e+00,\n",
+       "        1.77444454e+01,  1.76300130e+01,  1.02099654e+01,  7.46176417e+00,\n",
+       "        8.38408904e+00,  7.43402448e+00,  1.23334075e+01,  5.83203733e+00,\n",
+       "        1.49716227e+01, -9.45800137e+00,  1.80432289e+01,  1.83043826e+00,\n",
+       "       -6.77342495e-01,  1.59123732e+01,  7.79724064e+00,  2.40962495e+01,\n",
+       "       -1.55361282e+00,  3.43304028e+01,  1.55089730e+01,  1.72010951e+01,\n",
+       "        1.30117199e+01,  9.04394460e+00,  2.66051193e+01,  1.28627377e+01,\n",
+       "        1.08099056e+01])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2991,27 +3048,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.019562384903408336"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r2_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04374934490070059"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lm.score(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.019562384903408336"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lm.score(x_test, y_test)"
    ]
